# Codename-LightOfTheMoon

./: Animation.cpp  Animation.hpp  AnimatorComponent.cpp  AnimatorComponent.hpp  Boss1Component.cpp  BossComponent.cpp  BulletComponent.hpp  BulletPool.cpp  CMakeLists.txt  CameraComponent.cpp  CameraComponent.hpp  CharacterController.hpp  Component.cpp  Component.hpp  Credits.txt  DefaultAssetManager.hpp  GameAssetManager.cpp  GameAssetManager.hpp  GameObject.cpp  GameObject.hpp  HealthComponent.cpp  HealthComponent.hpp  IAudioService.hpp  LICENSE  LightOfTheMoon.cpp  MovementLinearComponent.cpp  MovementLinearComponent.hpp  MovementSpiralComponent.cpp  MovementWaveComponent.cpp  PhysicsComponent.cpp  PhysicsComponent.hpp  README.md  SpriteComponent.hpp  main.cpp
Assets/Levels/: level0.json  level1.json
Assets/Sprites/: MenuSprites.json
LightOfTheMoonSource/: AssetLocator.cpp  AssetLocator.hpp  AudioLocator.cpp  AudioLocator.hpp  Boss1Component.hpp  BossComponent.hpp  Box2DDebugDraw.cpp  Box2DDebugDraw.hpp  BulletComponent.cpp  BulletPool.hpp  CharacterController.cpp  DefaultAssetManager.cpp  GameAudio.cpp  GameAudio.hpp  IAssetService.hpp  LightOfTheMoon.hpp  MovementSpiralComponent.hpp  MovementWaveComponent.hpp  NullAudio.hpp  SpriteComponent.cpp  TileMap.cpp  TileMap.hpp  main.cpp
LightOfTheMoonSource/Assets/Levels/: level0_original.json
LightOfTheMoonSource/Assets/Sprites/: LOTMSprites.json
